@@ -20,6 +20,8 @@ changes relative to sbcl-1.3.20:
   * optimization: optimized external-format routines.
   * bug fix: SB-INTROSPECT:ALLOCATION-INFORMATION returns :IMMOBILE
     instead of :FOREIGN for objects in immobile space.
+  * bug fix: dotted lists in special forms and function call forms signal
+    an appropriate error
 
 changes in sbcl-1.3.20 relative to sbcl-1.3.19:
   * minor incompatible change: DEF{GENERIC,METHOD} no longer accept some
